syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.valteir";

package br.com.zupacademy.valteir;
import "google/protobuf/timestamp.proto";

service PixService {
  rpc cadastrar(PixRequest) returns (PixResponse);
}

service RemovePixService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse);
}

service ConsultaPixService {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse);
}

service ListaPixService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse);
}

message ErrorDetails {
  int32 code = 1;
  repeated string message = 2;
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message PixRequest {
  string idTitular = 1;
  TipoChave tipo = 2;
  string valorChave = 3;
  TipoConta conta = 4;
}

message PixResponse {
  string pixId = 1;
}

message RemoveChavePixRequest {
  string pixId = 1;
  string idTitular = 2;
}

message RemoveChavePixResponse {
  string pixId = 1;
  string idTitular = 2;
}


message ConsultaChavePixRequest {
  message FiltroPorPixId {
    string idTitular = 1;
    string pixId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message ConsultaChavePixResponse {
  message ChavePix {

    message Conta {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    Conta conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clientId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListaChavesPixRequest {
  string idTitular = 1;
}

message ListaChavesPixResponse {

  message ChavePix {
    string pixId = 1;
    string idTitular = 2;
    TipoChave tipo = 3;
    string chave = 4;
    TipoConta tipoConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }

  repeated ChavePix chaves = 1;

}